rangement : ouverture d'un rangement existant